monitoria/mac323/4-2-33/grades/Vítor-Kei-Taira-Tamada_190888_assignsubmission_file_WordDAG.java.txt

LOG DE COMPILAÇÃO E TESTE
Existem três métodos de compilação, eles estão indicados, se um falha eu parto pro outro. Então se quiser entender o porque não compilou, verifique os 3.
Segue também o log do corretor, pode ser interessante para descobrir a natureza de seus erros.

COMPILATION ERROR

CORREÇÃO AUTOMÁTICA
Quantidade de Testes | Veredito
0 | OK
0 | Erro de Montagem (o grafo dessa query não pode ser montado)
0 | Tempo de Execução Excedido
0 | Resposta Errada
0 | Erro de Execução
Existem 26 testes, se a soma não der 26 quer dizer que houve alguma falha especial em algum teste que não foi identificada pelo corretor

make: '/home/bcc/victorsenam/private/usp/monitoria/mac323/4-2-33/tester/checker/checker' is up to date.
WordDAG.java:12: error: cannot find symbol
  private Digraph dag;
          ^
  symbol:   class Digraph
  location: class WordDAG
WordDAG.java:58: error: cannot find symbol
    dag = new Digraph (size);
              ^
  symbol:   class Digraph
  location: class WordDAG
WordDAG.java:167: error: cannot find symbol
    Stack<Integer> path = new Stack<Integer>();
    ^
  symbol:   class Stack
  location: class WordDAG
WordDAG.java:167: error: cannot find symbol
    Stack<Integer> path = new Stack<Integer>();
                              ^
  symbol:   class Stack
  location: class WordDAG
WordDAG.java:201: error: cannot find symbol
    Merge.sort(test);
    ^
  symbol:   variable Merge
  location: class WordDAG
5 errors
=========== TENTANDO COMPILAR DE NOVO (LevelTraversal.java -> WordDAG.java) =============
WordDAG.java:12: error: cannot find symbol
  private Digraph dag;
          ^
  symbol:   class Digraph
  location: class WordDAG
WordDAG.java:58: error: cannot find symbol
    dag = new Digraph (size);
              ^
  symbol:   class Digraph
  location: class WordDAG
WordDAG.java:167: error: cannot find symbol
    Stack<Integer> path = new Stack<Integer>();
    ^
  symbol:   class Stack
  location: class WordDAG
WordDAG.java:167: error: cannot find symbol
    Stack<Integer> path = new Stack<Integer>();
                              ^
  symbol:   class Stack
  location: class WordDAG
WordDAG.java:201: error: cannot find symbol
    Merge.sort(test);
    ^
  symbol:   variable Merge
  location: class WordDAG
5 errors
=========== TENTANDO COMPILAR DE NOVO (imports no começo do código) ==============
WordDAG.java:99: error: unclosed string literal
-----");
     ^
WordDAG.java:114: error: ';' expected
word1 = " + word1 + "
                     ^
WordDAG.java:115: error: ';' expected
i - i_minus = " + (i - i_minus) + "
                                   ^
WordDAG.java:116: error: unclosed string literal
word2 = " + word2);
        ^
WordDAG.java:126: error: unclosed string literal
");
^
WordDAG.java:125: error: not a statement
" + words2 + "
^
WordDAG.java:148: error: unclosed string literal
        out.print(word1 + " " + word2 + "
                                        ^
WordDAG.java:149: error: unclosed string literal
");
^
WordDAG.java:181: error: unclosed string literal
      StdOut.println("c = " + c + "
                                  ^
WordDAG.java:181: error: ';' expected
      StdOut.println("c = " + c + "
                                   ^
WordDAG.java:182: error: illegal start of expression
from = " + from);
     ^
WordDAG.java:182: error: unclosed string literal
from = " + from);
       ^
12 errors
